# ai-gmail-labels

./: .env.example  .gitignore  ARCHITECTURE.md  EMAIL_SUMMARIZER_README.md  GMAIL_SETUP.md  MARKETING.md  MCP_TOOLS.md  PRD.md  PRIORITISATION.md  README.md  TODO.md  TODO_INSTALL.md  TODO_OPTIMISE.md  __init__.py  label-emails.sh  label_emails_cli.py  label_marketing_emails.py  label_priority_emails.py  label_receipt_emails.py  mcp.json  mcp_config.json  pyproject.toml  setup_gmail_auth.py  start_mcp_server.sh  summarize_emails.sh  summarize_unread_emails.py
config/: default.yaml
data/: agent_state.db-shm  agent_state.db-wal
src/: __init__.py  cli.py  cli_main.py  email_mcp_server.py
src/agents/: __init__.py  categorization_agent.py  email_retrieval_agent.py  orchestration_agent.py  user_interaction_agent.py
src/cli/: __init__.py  base.py  main.py
src/cli/commands/: __init__.py
src/cli/commands/label/: __init__.py  all.py  custom.py  marketing.py  notifications.py  priority.py  receipt.py
src/cli/commands/manage/: __init__.py  categories.py  labels.py  stats.py
src/cli/commands/system/: __init__.py  install.py
src/cli/formatters/: __init__.py  cli_logger.py
src/cli/langchain/: __init__.py  agents.py  chains.py  prompts.py
src/core/: __init__.py  config.py  database_pool.py  email_storage.py  error_recovery.py  event_bus.py  exceptions.py  mcp_logger.py  state_manager.py  system_monitor.py  transaction_manager.py
src/integrations/: gmail_client.py  ollama_client.py
src/models/: __init__.py  agent.py  common.py  email.py  gmail.py  ollama.py  unified_analysis.py
src/services/: __init__.py  categorization_service.py  custom_classifier.py  email_prioritizer.py  email_service.py  marketing_classifier.py  notification_service.py  notifications_classifier.py  receipt_classifier.py
